# QuizApp

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html
ai/: learning-tasks.js
android/: AndroidManifest.xml
backup/: local-backup.js
distribution/: quizapp-announcements.json
docs/: SpeedyNote派生笔记架构.md  layout-references.md  speedynote-port-matrix.md  综合学习平台实施计划.md  题库来源与手写学习平台路线图.md
exam/: exam-ui.js
native/: CMakeLists.txt  README.md
native/android/: AndroidManifest.xml  gradle.properties
native/android/assets/: index.html
native/android/res/xml/: qtprovider_paths.xml
native/android/src/org/quizapp/platform/: BackupDocumentBridge.java  LegacyMigrationBridge.java  QuizAppActivity.java  SecureSecretBridge.java  SharedStorageBridge.java
native/cmake/: VerifySpeedyNote.cmake
native/docs/: data-contracts.md  endfield-theme-reference.md  legacy-feature-migration-matrix.md
native/docs/releases/: v2.0.0-alpha.2.md  v2.0.0-alpha.3.md
native/resources/: quizapp-native.qrc
native/resources/contracts/: quizbackup-v2.schema.json
native/resources/schema/: 001_initial.sql  002_question_paths.sql  003_review_history.sql  004_managed_bank_sources.sql  005_legacy_migration_staging.sql  006_question_answer_state.sql  007_library_node_order.sql  008_library_hidden_banks.sql  009_managed_bank_overrides.sql  010_exam_completion.sql  011_notebook_recycle.sql
native/src/domain/: AiRecord.h  BankImportResult.h  ExamSession.h  LibraryStats.h  ManagedBankSource.h  Notebook.h  PracticeSession.h  Question.h  QuestionBank.h  QuestionIdentity.cpp  QuestionIdentity.h  QuestionOrdering.cpp  QuestionOrdering.h  ReviewCard.h  StudyEvent.h  WrongBookEntry.h
native/src/handwriting/: ISpeedyNoteAdapter.h  ISpeedyNotePdfBackend.h  SpeedyNotePdfBridge.cpp  SpeedyNoteStrokeAdapter.cpp  SpeedyNoteStrokeAdapter.h
native/src/platform/: AppUpdatePlatform.cpp  AppUpdatePlatform.h  BackupDocumentPlatform.cpp  BackupDocumentPlatform.h  LegacyWebMigrationPlatform.cpp  LegacyWebMigrationPlatform.h  SecureSecretStore.cpp  SecureSecretStore.h  SharedStoragePlatform.cpp  SharedStoragePlatform.h
native/src/repositories/: IPracticeRepository.h  IQuestionRepository.h  IReviewRepository.h  IStudyRepository.h  IWrongBookRepository.h
native/src/services/: AiConfigService.cpp  AiConfigService.h  AiQuestionAnalysisService.cpp  AiQuestionAnalysisService.h  AnnouncementService.cpp  AnnouncementService.h  AppUpdateService.cpp  AppUpdateService.h  BankDirectorySyncService.cpp  BankDirectorySyncService.h  BankInstallService.cpp  BankInstallService.h  BankReleaseService.cpp  BankReleaseService.h  BankReleaseStateStore.cpp  BankReleaseStateStore.h  BlobStore.cpp  BlobStore.h  DefaultBankBundleBootstrapService.cpp  DefaultBankBundleBootstrapService.h  ExamService.cpp  ExamService.h  FsrsScheduler.cpp  FsrsScheduler.h  LegacyBankImporter.cpp  LegacyBankImporter.h  LegacyMigrationService.cpp  LegacyMigrationService.h  LocalBackupService.cpp  LocalBackupService.h  NotebookService.cpp  NotebookService.h  PracticeService.cpp  PracticeService.h  ReviewService.cpp  ReviewService.h  SharedStorageFileService.cpp  SharedStorageFileService.h  SharedStorageService.cpp  SharedStorageService.h  (+6 more)
native/src/storage/: Database.cpp  Database.h  SqliteAiRecordRepository.cpp  SqliteAiRecordRepository.h  SqliteAnswerStateRepository.cpp  SqliteAnswerStateRepository.h  SqliteBankSourceRepository.cpp  SqliteBankSourceRepository.h  SqliteExamRepository.cpp  SqliteExamRepository.h  SqliteLibraryRepository.cpp  SqliteLibraryRepository.h  SqliteNotebookRepository.cpp  SqliteNotebookRepository.h  SqlitePracticeRepository.cpp  SqlitePracticeRepository.h  SqliteQuestionRepository.cpp  SqliteQuestionRepository.h  SqliteReviewRepository.cpp  SqliteReviewRepository.h  SqliteStudyRepository.cpp  SqliteStudyRepository.h  SqliteWrongBookRepository.cpp  SqliteWrongBookRepository.h
native/src/tools/: BankBundleTool.cpp
native/src/ui/: AiSettingsPanel.cpp  AiSettingsPanel.h  AnnouncementDialog.cpp  AnnouncementDialog.h  AnswerTablePage.cpp  AnswerTablePage.h  AppFont.cpp  AppFont.h  AppUpdateDialog.cpp  AppUpdateDialog.h  AppWindow.cpp  AppWindow.h  BackupSettingsPanel.cpp  BackupSettingsPanel.h  BankReleaseDialog.cpp  BankReleaseDialog.h  ChoiceComboBox.cpp  ChoiceComboBox.h  EndfieldTheme.cpp  EndfieldTheme.h  ExamPage.cpp  ExamPage.h  HandwritingPage.cpp  HandwritingPage.h  MaterialIconProvider.cpp  MaterialIconProvider.h  NotebookLibraryPage.cpp  NotebookLibraryPage.h  PracticePage.cpp  PracticePage.h  QuestionAiPanel.cpp  QuestionAiPanel.h  QuestionOverviewDialog.cpp  QuestionOverviewDialog.h  ReviewPage.cpp  ReviewPage.h  StudyHubPage.cpp  StudyHubPage.h  StudyTrendChart.cpp  StudyTrendChart.h  (+5 more)
native/tests/: CMakeLists.txt  tst_app_shell.cpp  tst_native_core.cpp  verify_contracts.py
notebook/: knowledge-graph.js  notebook-export.js  ocr-ui.js  ocr.js  pdf-notebook.js  rich-objects.js  speedynote-notebook.js
review/: fsrs-review.js  review-ui.js
scripts/: build-apk.ps1  build-exe.ps1  build-native.ps1  build-release-bank-assets.py  build-visual-contact-sheet.py  dev-server.mjs  export-xiaoyi-public-banks.mjs  fetch-speedynote.ps1  import-docx-v2.py  import-docx.py  import-maogai-json-exports.py  import-maogai-md.js  import-xisi-docx-exports.py  import-xisi.py  repair-question-data.js  test-android-native.ps1
shell/: main-hub.js
tests/: ai-learning-ui.mjs  backup-restore-ui.mjs  distribution-ui.mjs  edit-library-ui.mjs  endfield-theme-ui.mjs  exam-history-ui.mjs  large-bank-lazy-loading-ui.mjs  learning-dashboard-ui.mjs  main-shell-ui.mjs  notebook-bookmarks-ui.mjs  notebook-knowledge-graph-ui.mjs  notebook-library-ui.mjs  notebook-ocr-ui.mjs  notebook-pdf-export-ui.mjs  notebook-rich-objects-ui.mjs  notebook-ui.mjs  pdf-file-mode-ui.mjs  pdf-notebook-ui.mjs  select-controls-ui.mjs  settings-behavior-ui.mjs  verify-ai-learning-tasks.mjs  verify-android-webview-contract.mjs  verify-notebook-engine.mjs  verify-notebook-ocr.mjs  verify-release-packaging.mjs  verify-v1.0.18-compatibility.mjs  (+1 more)
(+14 files in other folders)
